<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Money Manager</string>
    <string name="wiyn">What is your name?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_money_manager">MoneyManager</string>
    <string name="enter">Enter</string>
    <string name="desc1">Add a new transaction</string>
    <string name="title_activity_start_transaction">StartTransaction</string>
    <string name="title_activity_add_new_transaction">Add a new Transaction</string>
    <string name="title_activity_add_new_transaction_category">Select Category</string>
    <string name="addNewCat">Add a new Category</string>
    <string name="chng">Reset Money</string>
    <string name="totlmny">Total Money is :</string>
    <string name="zero">0 $</string>
    <string name="setCat">Select a Category</string>
    <string name="dollar"> $</string>
    <string name="add">Add</string>
    <string name="resetMoney">Change Money</string>
    <string name="resetTrans">Reset Transaction</string>
    <string name="resetName">Reset Your Name</string>
    <string name="resetAll">Reset All</string>
    <string name="owrvw">Overview</string>
    <string name="erned">Earned :</string>
    <string name="spent">Spent  :</string>
    <string name="lastitem">Last item :</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="howmuch">How much money you have?</string>
    <string name="howmuch1">How much your money is?</string>
    <string name="ok">OK</string>
    <string name="date">Date :</string>
    <string name="title_activity_fragment">Fragment</string>
    <string name="hello_world">Hello world!</string>

</resources>
