<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/totlmny"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:paddingEnd="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="2dp"
            android:paddingStart="20dp"
            android:text="@string/zero"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:onClick="changeTotalMoney"
            android:text="@string/chng"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <View
            android:id="@+id/hLine1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/linearLayout1"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/owrvw"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#008000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/erned"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0000FF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/spent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFF4444"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/earnedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0000FF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/spentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFF4444"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/hLine1"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/lastitem"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#008000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/transactionData1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TextView01" >
        </ListView>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:contentDescription="@string/desc1"
        android:onClick="startTransaction"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/ico_001" />

</LinearLayout>