<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hulkdx.moneymanager.AddNewTransaction" >

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/setCat"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#809080" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categoryTextView"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/dollar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:onClick="onClickDate" >

        <TextView
            android:id="@+id/monthToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/dayToday"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/monthToday"
            android:layout_alignRight="@+id/monthToday"
            android:layout_below="@+id/monthToday"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/yearToday"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/dayToday"
            android:layout_alignRight="@+id/dayToday"
            android:layout_below="@+id/dayToday"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080" />
    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="86dp"
        android:layout_height="28dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="onClickAddButton"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignStart="@+id/linearLayout1"
        android:layout_alignTop="@+id/relativeLayout1"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </RadioGroup>

</RelativeLayout>